[package]
name = "ckb-machinegun"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"

[dependencies]
ckb-jsonrpc-client = { git = "https://github.com/yangby-cryptape/ckb-jsonrpc-sdk", rev = "9abef0b" }
ckb-jsonrpc-interfaces = { git = "https://github.com/yangby-cryptape/ckb-jsonrpc-sdk", rev = "9abef0b" }
jsonrpc-sdk-client = "0.1.3"
jsonrpc-sdk-prelude = "0.1.3"
clap = "2.33"
indicatif = "0.11"
console = "0.7"
rusqlite = "0.17"
parking_lot = "0.7"
crossbeam = "0.7"
rand = "0.6"
futures = "0.1"
tokio = "0.1"
